# eps-Seg

./: .gitignore  LICENSE  README.md  dev.ipynb  pyproject.toml
engine/: callbacks.py  trainer.py
experiments/common_configs/: betaseg.yaml  betaseg3d.yaml
experiments/dev_dataset/: dev_dataset.yaml
experiments/dev_experiment/: dev_experiment.yaml
models/: lvae.py  lvae_layers.py
notebooks/: test_cache_split_datasets.ipynb
notebooks/configs/: betaseg.yaml  train_dev.yaml  train_testrun.yaml
scripts/: original_training.py  pred.ipynb  testconfig.yaml  train_betaseg.py
scripts/baselines/unet3d/: biapy_small_unet_betaseg_3d.ipynb  default_config.yaml  small_unet_betaseg_3d.yaml
scripts/dev/: dev_dataset.ipynb  dev_train_betaseg_semisupervised.py
scripts/wandb/: latest-run
scripts/wandb/offline-run-20251017_110405-m74xghk4/: run-m74xghk4.wandb
scripts/wandb/offline-run-20251017_110405-m74xghk4/files/: requirements.txt
scripts/wandb/offline-run-20251017_113357-rjrxhjcb/: run-rjrxhjcb.wandb
src/eps_seg/: predict.py  train.py
src/eps_seg/config/: __init__.py  base.py  datasets.py  models.py  train.py
src/eps_seg/dataloaders/: datamodules.py  datasets.py  dev_liverfiber_datamodule.py  samplers.py  utils.py
src/eps_seg/models/: __init__.py  lvae.py
src/eps_seg/modules/lvae/: __init__.py  layers.py  likelihoods.py  lvae.py  utils.py
src/eps_seg/train/: callbacks.py  optimizers.py  trainer.py
src/eps_seg/training/: callbacks.py  metrics.py  optimizers.py
src/eps_seg/utils/: outputs.py
(+1 files in other folders)
