[project]
name = "eps-seg"
version = "0.1.0"
description = "A hierarchical variational autoencoder based method for semantic segmentation of Electron Microscopy data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.0.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "tifffile>=2025.10.4",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
]

[tool.setuptools.packages.find]
where = ["src"]
