[project]
name = "eps-seg"
version = "0.1.0"
description = "A hierarchical variational autoencoder based method for semantic segmentation of Electron Microscopy data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.0.0",
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "tifffile>=2025.10.4",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
    "zarr>=3.1.3",
]

[project.optional-dependencies]
dev = [
    "torchvista>=0.2.6",
]
baselines = [
    "biapy>=3.4.1",
    "d>=0.2.2",
    "timm>=1.0.22",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
eps-train = "eps_seg.train:main"
